# lorc

./: Cargo.toml  README.md  package-lock.json  package.json  tailwind.config.cjs
generic/atoms/: Text.svelte  mod.rs
generic/atoms/body/: mod.rs  props.rs
generic/atoms/button/: button_options.rs  mod.rs  props.rs
generic/atoms/color_variant/: mod.rs
generic/atoms/label/: mod.rs
generic/atoms/svg_icons/: mod.rs
generic/atoms/text_link/: mod.rs  props.rs
generic/atoms/title/: mod.rs  props.rs
generic/molecules/slider/: mod.rs  props.rs
generic/organisms/client_review_card/: mod.rs
generic/organisms/header/: mod.rs
generic/organisms/page_footer/: mod.rs
generic/organisms/page_header/: mod.rs
src/atoms/logo/: mod.rs
src/atoms/text_link/: mod.rs
src/lib/generic/atoms/: Button.svelte  Icon.svelte  Text.svelte  index.ts
src/lib/generic/atoms/button/: props.rs
src/lib/generic/atoms/display/: mod.rs
src/lib/generic/atoms/headline/: mod.rs
src/lib/generic/atoms/label/: mod.rs  props.rs
src/lib/generic/atoms/size_variant/: mod.rs
src/lib/generic/atoms/svg_icons/: mod.rs  props.rs
src/molecules/big_text_field/: mod.rs
src/molecules/text_field/: mod.rs
src/organisms/client_review_card/: mod.rs
src/organisms/contact_form/: mod.rs
src/organisms/footer/: mod.rs
src/organisms/header/: mod.rs
src/organisms/staff_card/: mod.rs
src/routes/: +layout.svelte  +page.svelte
src/templates/: mod.rs
src/templates/page/: mod.rs
styles/: tailwind.css
