[package]
name = "yew_components_library"
version = "0.1.0"
edition = "2021"
description = "A collection of yew components using the atomic component management system. Components are made in tailwindcss."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]
