[package]
name = "yew_components_library"
version = "0.1.0"
edition = "2021"
description = "A collection of yew components using the atomic component management system. Components are made in tailwindcss."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window"
]
